fixed signInWithGoogle button mobile view

--- a/client/src/components/sign-in/sign-in-styles.scss
+++ b/client/src/components/sign-in/sign-in-styles.scss
@@ -21,8 +21,15 @@
         display: flex;
         justify-content: space-between;
 
-        @media screen and (min-width: 600px) and (max-width: 740px) {
+        @media screen and (max-width: 999px) {
             flex-flow: column;
+            max-width: 200px;
+        }
+
+        .googleButton {
+            min-width: 200px;
+            padding-right: 10px;
         }
     }
+
 }
